Add README and example SVG files; update Java version to 11